# equity-research-hub

./: README.md
investment-system/: .env.example  .gitignore  README.md  pyproject.toml
investment-system/scripts/: daily_update.py  earnings_analyze.py  weekly_report.py
investment-system/src/: __init__.py  config.py
investment-system/src/alert/: __init__.py  slack_notify.py
investment-system/src/analysis/: __init__.py  growth_score.py  models.py  nlp_earnings.py  regime.py
investment-system/src/dashboard/: __init__.py  app.py
investment-system/src/data/: __init__.py  edinet.py  market.py  models.py  tdnet.py
investment-system/src/portfolio/: __init__.py  benchmark.py  screener.py
investment-system/tests/: conftest.py  test_benchmark.py  test_config.py  test_growth_score.py  test_market.py  test_regime.py  test_screener.py
